[package]
name = "emwin-tg"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "A client for the the NWS Emergency Managers Weather Information Network telecommunications gateway"
repository = "https://github.com/willglynn/emwin-tg"
license = "MIT OR Apache-2.0"
keywords = ["weather", "noaa", "emwin", "nwws"]
categories = ["api-bindings", "science"]

[dependencies]
bytes = "1.1"
zip = { version = "0.5", features = ["deflate"] }
thiserror = "1.0"
tokio = { version = "1.16", features = ["rt", "macros"] }
futures = "0.3"
reqwest = { version = "0.11" }
log = "0.4"
pin-project-lite = "0.2.8"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.16", features = ["full"] }
tokio-test = "0.4"